# data_pipeline

./: .cursorrules  .gitignore  .prettierrc  BUILD_WINDOWS.md  README.md  app_gui.py  build_exe.py  config.yaml  dashboard_compare.py  dashboard_server.py  dashboard_sources.html  dashboard_sources.py  export_dashboard_data.py  main.py  pyproject.toml  requirements.txt  setup-hooks.sh  visualize.py
.cursor/rules/: html.mdc  javascript.mdc  python.mdc
.githooks/: pre-push
.github/workflows/: build.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: data.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/: Card.tsx  Charts.tsx  Navigation.tsx
dashboard/src/hooks/: useData.ts
dashboard/src/pages/: Compare.tsx  Overview.tsx  Sources.tsx
dashboard/src/types/: index.ts
dashboard/src/utils/: format.ts
src/: extract.py  load.py  transform.py
src/etl/: __init__.py  base.py  pipeline.py
src/etl/bronze/: __init__.py  base.py  shopee.py  website.py
src/etl/gold/: __init__.py  combine.py
src/etl/silver/: __init__.py  base.py  shopee.py  website.py
templates/: base.css  dashboard_compare.html  dashboard_overview.html  dashboard_sources.html  nav.html
tests/: __init__.py  test_dashboard_server.py
